derive/test/compile_fail/invalid_attr_struct_field_partially_indexed.stderr
error: proc-macro derive panicked
 --> compile_fail/invalid_attr_struct_field_partially_indexed.rs:4:10
  |
4 | #[derive(Value)]
  |          ^^^^^
  |
  = help: message: if any fields have an `index` specified then all fields need one
